# commondata-countries-python

./: README.md  pyproject.toml
.github/workflows/: create-release.yaml  publish-pypi.yaml
tests/: test_countries.py
